# cross-language-example

./: .bazelrc  .gitignore  MODULE.bazel  paket.dependencies
FakeExchange/: Agent.cs  BUILD.bazel  FakeExchange.cs  FakeExchangeSmokeTest.cs
FakeExchangeAPI/: BUILD.bazel  CAgent.cs  FakeExchangeAPI.cs
docker/: BUILD.bazel  README.md
greetings/: BUILD.bazel  Cargo.toml  Greetings.cs  lib.rs
greetings_lib/: BUILD.bazel  lib.rs
greetings_wrapper/: BUILD.bazel  Greetings.cs  c_interface.rs
greetings_wrapper/tests/: BUILD.bazel  GreetingsTests.cs
hello/: BUILD.bazel  Program.cs
src/greetings/: BUILD.bazel  Greetings.cs
src/hello/: BUILD.bazel  Program.cs
tools/: BUILD.bazel  xunit.bzl  xunit_main.cs
