module(
    name = "crosslang",
    version = "0.1.0",
)

bazel_dep(name = "rules_dotnet", version = "0.19.2")
bazel_dep(name = "rules_rust", version = "0.61.0")

# .NET toolchain
dotnet = use_extension("@rules_dotnet//dotnet:extensions.bzl", "dotnet")
dotnet.toolchain(dotnet_version = "9.0.100")  # or "8.0.200"
use_repo(dotnet, "dotnet_toolchains")

register_toolchains("@dotnet_toolchains//:all")

# Rust toolchain (correct extension + attrs)
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    versions = ["1.77.1"],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

# Paket2Bazel (generated extension)
paket = use_extension("//third_party/nuget:paket.main_extension.bzl", "paket")
use_repo(paket, "paket.main")
