load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

# Pure Rust library with business logic
rust_library(
    name = "greetings_lib",
    srcs = ["lib.rs"],
    edition = "2021",
    visibility = ["//greetings_wrapper:__subpackages__"],
)

# Test the pure Rust library
rust_test(
    name = "greetings_lib_test",
    crate = ":greetings_lib",
    edition = "2021",
)
