load("@rules_dotnet//dotnet:defs.bzl", "csharp_library")
load("@rules_rust//rust:defs.bzl", "rust_shared_library")

# C-compatible shared library
rust_shared_library(
    name = "greetings_rust",
    srcs = ["c_interface.rs"],
    edition = "2021",
    visibility = [
        "//docker:__pkg__",
        "//greetings_wrapper:__subpackages__",
    ],
    deps = ["//greetings_lib"],
)

# Create a C# wrapper library for the Rust library
csharp_library(
    name = "greetings_wrapper",
    srcs = ["Greetings.cs"],
    data = [":greetings_rust"],
    target_frameworks = ["net9.0"],
    visibility = [
        "//greetings_wrapper:__subpackages__",
        "//hello:__pkg__",
    ],
)
